improved the sidebar and added images

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <header class="header">
         <div class="header-1">
 
-            <div class="search"> <img src="" alt="search icon"> 
+            <div class="search"> <img src="/images/text-search-variant.svg" alt="search icon" class="icon"> 
                 <label for="search-tab"></label>
                 <input type="search" id="search-tab" name="search-tab">
             </div>
 
             <div class="info">
                 <p>
-                <img src="" alt="notification">
-                <img src="" alt="profil picture">
+                <img src="/images/bell-ring.svg" alt="notification" class="icon">
+                <img src="/images/character-7799114_1280.png" alt="profil picture" class="icon">
                 Morgan Oakley
             </p>
             </div>
@@ -28,7 +28,7 @@
         <div class="header-2">
 
             <div>
-                <img src="" alt="profile picture">
+                <img src="/images/character-7799114_1280.png" alt="profile picture" class="icon pp"> <!-- from Pikurā on Pixabay-->
             </div>
 
             <div class="greeting">
@@ -48,7 +48,22 @@
     </header>
 
     <div class="sidebar">
-        <p> <img src="" alt="grid icon"> Dashboard </p>
+        <p> <img src="/images/view-grid.svg" alt="grid icon" class="icon"> Dashboard </p>
+
+        <ul>
+            <li><img src="/images/home-circle.svg" alt="home logo" class="icon"> Home</li>
+            <li><img src="/images/account-box.svg" alt="account logo" class="icon"> profile</li>
+            <li><img src="/images/message.svg" alt="message logo" class="icon"> Message</li>
+            <li><img src="/images/history.svg" alt="history logo" class="icon"> History</li>
+            <li><img src="/images/file-multiple.svg" alt=" tasks logo" class="icon"> Tasks</li>
+            <li><img src="/images/account-group.svg" alt="group logo" class="icon"> Comunities</li>
+        </ul>
+
+        <ul>
+            <li><img src="/images/cog.svg" alt="setting icon" class="icon"> Settings</li>
+            <li><img src="/images/face-agent.svg" alt="support icon" class="icon"> Support</li>
+            <li><img src="/images/comment-check.svg" alt="" class="icon"> Privacy</li>
+        </ul>
         
     </div>
 
