greatly impoved the css

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <li><img src="/images/account-group.svg" alt="group logo" class="icon"> Comunities</li>
         </ul>
 
-        <ul>
+        <ul class="grp-2">
             <li><img src="/images/cog.svg" alt="setting icon" class="icon"> Settings</li>
             <li><img src="/images/face-agent.svg" alt="support icon" class="icon"> Support</li>
             <li><img src="/images/comment-check.svg" alt="" class="icon"> Privacy</li>
@@ -72,43 +72,147 @@
     </div>
 
     <div class="content">
+        
         <div class="main">
 
+            <h3>Your Projects</h3>
+
             <div class="card">
-                <h4>Super Cool Project</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                <div>
+                    <h4>Super Cool Project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
                     labore et dolore magna aliqua.</p>
+                </div>
+                <p>
+                    <img src="/images/star.svg" alt="add to like">
+                    <img src="/images/eye-plus.svg" alt="add to see later">
+                    <img src="/images/share.svg" alt="share">
+                </p>
+                
             </div>
 
             <div class="card">
-                <h4>Super Cool Project 2</h4>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <div>
+                    <h4>Super Cool Project 2</h4>
+                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+                <p>
+                    <img src="/images/star.svg" alt="add to like">
+                    <img src="/images/eye-plus.svg" alt="add to see later">
+                    <img src="/images/share.svg" alt="share">
+                </p>
             </div>
 
             <div class="card">
-                <h4>Super Cool Project 3</h4>
-                <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <div>
+                    <h4>Super Cool Project 3</h4>
+                    <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                </div>
+                <p>
+                    <img src="/images/star.svg" alt="add to like">
+                    <img src="/images/eye-plus.svg" alt="add to see later">
+                    <img src="/images/share.svg" alt="share">
+                </p>   
             </div>
 
             <div class="card">
-                <h4>Super Cool Project 4</h4>
-                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div>
+                    <h4>Super Cool Project 4</h4>
+                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                <p>
+                    <img src="/images/star.svg" alt="add to like">
+                    <img src="/images/eye-plus.svg" alt="add to see later">
+                    <img src="/images/share.svg" alt="share">
+                </p>
             </div>
 
             <div class="card">
-                <h4>Super Cool Project 5</h4>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione 
-                    voluptatem sequi nesciunt.</p>
+                <div>
+                    <h4>Super Cool Project 5</h4>
+                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione 
+                        voluptatem sequi nesciunt.</p>
+                </div>
+                <p>
+                    <img src="/images/star.svg" alt="add to like">
+                    <img src="/images/eye-plus.svg" alt="add to see later">
+                    <img src="/images/share.svg" alt="share">
+                </p>
             </div>
 
             <div class="card">
-                <h4>Super Cool Project 6</h4>
-                <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
+                <div>
+                    <h4>Super Cool Project 6</h4>
+                    <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
+                </div>
+                <p>
+                    <img src="/images/star.svg" alt="add to like">
+                    <img src="/images/eye-plus.svg" alt="add to see later">
+                    <img src="/images/share.svg" alt="share">
+                </p>
             </div>
 
         </div>
 
         <div class="side-content">
+
+            <h3 class="push">Announcements</h3>
+
+            <div class="card-ann">
+
+                <h4> Site Maintenance</h4>
+                <p>
+                    Et harum quidem rerum facilis est et expedita distinctio.
+                </p>
+                <hr>
+
+                <h4> Community Share Day</h4>
+                <p>
+                    Nam aliquam nibh eu orci porttitor, et vehicula arcu consequat.
+                </p>
+                <hr>
+
+                <h4> Updated Privacy Policy</h4>
+                <p>
+                    In scelerisque dolor lacus, a viverra mauris vulputate dignissim.
+                </p>
+            </div>
+
+            <h3>Trending</h3>
+
+            <div class="card-trending">
+
+                <ul>
+                    <li><img src="/images/female-7309755_1280.png" alt="" class="icon rounder original"> 
+                        <div>
+                            <h6>@tegan</h6>
+                            <p class="profil-desc">World Peace Builder</p>
+                        </div>
+                    </li>
+
+                    <li><img src="/images/icon-5887126_1280.png" alt="" class="icon rounder"> 
+                        <div>
+                            <h6>@morgan</h6>
+                            <p class="profil-desc">Super Cool Project</p>
+                        </div>
+                    </li>
+
+                    <li><img src="/images/pixel-6845412_1280.png" alt="" class="icon rounder"> 
+                        <div>
+                            <h6>@kendall</h6>
+                            <p class="profil-desc">Life changing App</p>
+                        </div>
+                    </li>
+
+                    <li><img src="/images/stamp-9391730_1280.png" alt="" class="icon bigger rounder original"> 
+                        <div>
+                            <h6>@alex</h6>
+                            <p class="profil-desc">No Traffic Maker</p>
+                        </div>
+                    </li>
+                </ul>
+
+            </div>
 
         </div>
 
