finished the project

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
              
                 <div>
                     <label for="search-tab"></label>
-                    <input type="search" id="search-tab" name="search-tab">
+                    <input type="search" id="search-tab" name="search-tab" class="search-tab">
                 </div>
             </div>
 
